registeration api changes done

--- a/.env
+++ b/.env
@@ -2,6 +2,6 @@ DB_CLIENT=mysql
 DB_HOST=localhost
 DB_USER=root
 DB_PASS=
-DB_NAME=one-mg-project
+DB_NAME=medicos
 JWT_SECRET=test@123#%%^
 IMAGE_PATH=http://localhost:2000/public/images
