--- a/.env
+++ b/.env
@@ -4,4 +4,4 @@ DB_USER=root
 DB_PASS=
 DB_NAME=medicos
 JWT_SECRET=test@123#%%^
-IMAGE_PATH=http://localhost:2000/public/images
+IMAGE_PATH=http://localhost:2000
