--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "0.21.15",
     "lodash": "^4.17.20",
+    "moment": "^2.29.4",
     "morgan": "~1.9.1",
     "multer": "1.4.2",
     "mysql": "2.18.1",
