token decoder added and general function created

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "http-errors": "~1.6.3",
     "joi": "^17.3.0",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^3.1.2",
     "knex": "0.21.15",
     "lodash": "^4.17.20",
     "moment": "^2.29.4",
